# 14_ObservatoirePratiqueInfluence

./: .gitignore  Makefile  README.md  docker-compose.yml
brand-annotation/: README.md  apply_extraction.py  extraction_instagram.py  extraction_tiktok.py  extraction_youtube.py  pyproject.toml
brand-annotation/data/labelled/: instagram.csv  tiktok.csv
data-extractors/: .env.example  .env.staging  README.md  pyproject.toml
data-extractors/data/: .gitignore  account_urls.csv  tiktok_account_urls.csv  tiktok_sample_task.csv
data-extractors/src/: README.md  api_client_README.md  default_api_backend_url.py  generate_tasks.py  get_required_env.py  main.py  nocodb_client.py  run_extract.py  run_generate_task.py  run_upload_to_noco.py  task_processing_loop.py
data-extractors/src/api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
data-extractors/src/api_client/api/: __init__.py  default_api.py  ping_api.py
data-extractors/src/api_client/models/: __init__.py  account.py  detailed_stats.py  extract_account_task_config.py  extract_post_details_task_config.py  extract_post_list_task_config.py  extraction_task.py  extraction_task_response.py  extraction_task_stats_response.py  extraction_task_status.py  extraction_task_type.py  http_validation_error.py  influencer.py  location_inner.py  mark_failed_payload.py  mark_task_failed_payload.py  post.py  recycle_expired_tasks_response.py  recycle_failed_tasks_response.py  social_network.py  task_config.py  task_config1.py  validation_error.py
data-extractors/src/data_extractors/: data_extractor.py
data-extractors/src/data_extractors/instagram/: instagram_extractor.py  test_extract_list_posts.py  test_extract_one_post.py  test_extract_profile.py
data-extractors/src/data_extractors/tiktok/: tiktok_extractor.py  tiktok_extractor_sb.py  tiktok_extractor_v2.py  tiktok_sb.py  tiktokapi.py
data-extractors/src/data_extractors/tiktok/api_sample_data/: user.json  video.json
data-extractors/src/data_extractors/tiktok/tta/: tiktok_extractor_tta.py  tiktokapi.py
data-extractors/src/data_extractors/youtube/: disk_cache.py  youtube_api_client.py  youtube_api_config.py  youtube_extractor.py
data-extractors/src/extraction_task/: extraction_task.py  extraction_task_config.py  extraction_task_result.py  extraction_task_service.py  social_network.py
data-extractors/src/extraction_task/api/: api_client.py  api_extraction_task_service.py  mappings.py
data-extractors/src/extraction_task/local/: account_repository.py  csv_repository.py  local_extraction_task_service.py  post_repository.py  task_repository.py  task_result_repository.py
docs/: architecture.md
frontend/: .env.example  (+6 more)
opi-api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
opi-api/app/: main.py
opi-api/app/backend/routing/: router.py
opi-api/app/backend/routing/endpoints/: account.py
opi-api/migrations/: 000001_initial.down.sql  000001_initial.up.sql  000002_remove_unused_tables.down.sql  000002_remove_unused_tables.up.sql
opi-api/src/app/: __init__.py  __main__.py  _auth.py  _config.py  config.py  factory.py  nocodb.py
opi-api/src/app/backend/: ping.py
opi-api/src/app/backend/routing/: router.py
opi-api/src/app/backend/routing/endpoints/: extraction_task.py  influencer.py  social_network.py
opi-api/src/app/db/: pool.py
opi-api/src/app/models/: __init__.py  socialnetwork.py  task.py
(+36 files in other folders)
