[project]
name = "brand-annotation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
]


[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true




[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]

