[project]
name = "data-extractors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
]



[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true

