[project]
name = "data-extractors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "instaloader>=v4.15"
]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
]

