[project]
name = "data-extractors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "instaloader>=v4.15",
    "diskcache",
    "tiktokapi>=7.3.0",
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.15.0",
]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# ignore errors in generated api_client
module = "api_client.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["TikTokApi", "diskcache"]
follow_untyped_imports = true

[tool.ruff]
exclude = ["src/api_client"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
]

