[project]
name = "opi-api"
version = "0.1.0"
description = "Rest API for observatoire des pratique influence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.128.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/app"]
sources = ["src"]

[project.scripts]
opi-api = "app:main"
