[project]
name = "opi-api"
version = "0.1.0"
description = "Rest API for observatoire des pratique influence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/app"]
sources = ["src"]

[project.scripts]
opi-api = "app:main"

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
